# research-agent

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml
agent/: guardrails.py  loop.py  planner.py  reflector.py  researcher.py  state.py  synthesizer.py
evals/: dataset.py  metrics.py  runner.py
llm/: client.py  utils.py
observability/: dashboard.py  logging.py  tracer.py
prompts/: __init__.py  planner.py  reflector.py  researcher.py  synthesizer.py
tests/integration/: test_phase1_tools.py
tests/unit/: test_dashboard.py  test_extract.py  test_fetch.py  test_guardrails.py  test_llm_utils.py  test_loop.py  test_planner.py  test_reflector.py  test_researcher.py  test_retry.py  test_search.py  test_state.py  test_synthesizer.py  test_tracer.py
tools/: extract.py  fetch.py  retry.py  search.py
